added collection and validation
