# controllers/employees.js
@@ -3,21 +3,57 @@ const ObjectId = require('mongodb').ObjectId;
 
 const getAll = async (req, res) => {
     //#swagger.tags=['Employees']
-    const result = await mongodb.getDatabase().db().collection('employees').find();
-    result.toArray().then((employees) => {
+    try {
+        const result = await mongodb
+            .getDatabase()
+            .db()
+            .collection('employees')
+            .find()
+            .toArray();
+
         res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(employees);
-    });
+        res.status(200).json(result);
+    } catch (err) {
+        res.status(400).json({ message: err.message });
+    }
+    // const result = await mongodb.getDatabase().db().collection('employees').find();
+    // result.toArray().then((employees) => {
+    //     res.setHeader('Content-Type', 'application/json');
+    //     res.status(200).json(employees);
+    // });
 };
 
 const getSingle = async (req, res) => {
     //#swagger.tags=['Employees']
-    const employeeId = new ObjectId(req.params.id);
-    const result = await mongodb.getDatabase().db().collection('employees').find({ _id: employeeId });
-    result.toArray().then((employees) => {
+
+    try {
+        if (!ObjectId.isValid(req.params.id)) {
+            res.status(400).json('Must be valid ID to find');
+        }
+        const employeeId = new ObjectId(req.params.id);
+        const result = await mongodb
+            .getDatabase()
+            .db()
+            .collection('employees')
+            .findOne({ _id: employeeId });
+
+        if (!result) {
+            res.status(404).json({ message: 'Employee not found' });
+            return;
+        }
+
         res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(employees[0]);
-    });
+        res.status(200).json(result);
+    } catch (err) {
+        res.status(400).json({ message: err.message });
+    }
+
+    // const employeeId = new ObjectId(req.params.id);
+    // const result = await mongodb.getDatabase().db().collection('employees').find({ _id: employeeId });
+    // result.toArray().then((employees) => {
+    //     res.setHeader('Content-Type', 'application/json');
+    //     res.status(200).json(employees[0]);
+    // });
 };
 
 const createEmployee = async (req, res) => {
@@ -27,43 +63,53 @@ const createEmployee = async (req, res) => {
         lastname: req.body.lastname,
         badgenumber: req.body.badgenumber,
         department: req.body.department,
-        shift: req.body.shift
+        shift: req.body.shift,
+        location: req.body.location,
+        status: req.body.status
     };
 
     const result = await mongodb.getDatabase().db().collection('employees').insertOne(employee);
     if (result.acknowledged > 0) {
         res.status(204).send();
     } else {
-        res.status(500).json(result.error || 'Error occured while creating employee');
+        res.status(500).json(result.error || 'Error occurred while creating employee');
     }
 };
 
 const updateEmployee = async (req, res) => {
     //#swagger.tags=['Employees']
+    if (!ObjectId.isValid(req.params.id)) {
+        res.status(400).json('Must be valid ID to update');
+    }
     const employeeId = new ObjectId(req.params.id);
     const employee = {
         firstname: req.body.firstname,
         lastname: req.body.lastname,
         badgenumber: req.body.badgenumber,
         department: req.body.department,
-        shift: req.body.shift
+        shift: req.body.shift,
+        location: req.body.location,
+        status: req.body.status
     };
     const result = await mongodb.getDatabase().db().collection('employees').replaceOne({ _id: employeeId }, employee);
     if (result.modifiedCount > 0) {
         res.status(204).send();
     } else {
-        res.status(500).json(result.error || 'Error occured while updating employee');
+        res.status(500).json(result.error || 'Error occurred while updating employee');
     }
 };
 
 const deleteEmployee = async (req, res) => {
     //#swagger.tags=['Employees']
+    if (!ObjectId.isValid(req.params.id)) {
+        res.status(400).json('Must be valid ID to delete');
+    }
     const employeeId = new ObjectId(req.params.id);
     const result = await mongodb.getDatabase().db().collection('employees').deleteOne({ _id: employeeId });
     if (result.deleteCount > 0) {
-        res.status(204).send();
+        res.status(500).json({ message: 'Employee not found or already deleted' });
     } else {
-        res.status(500).json(result.error || 'Success occured while deleting employee');
+        res.status(204).send();
     }
 };
 
